kubernetes/object-detector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: object-detector-service # New unique service name
  namespace: spe-project
spec:
  selector:
    app: object-detector-backend # MUST match the label of the object-detector pods
  ports:
  - name: http-object # Optional name
    protocol: TCP
    port: 80 # Service listens on port 80 internally
    targetPort: 8001 # MUST match the containerPort in object-detector-deployment
  type: ClusterIP
